footer fixes, hide library stats if screen is too small
and adjust progress bar lengths

--- a/public/styles/library_stats.less
+++ b/public/styles/library_stats.less
@@ -3,4 +3,10 @@
         float: right;
         margin: 0 10px 0 0;
     }
+
+    @media only screen and (max-width : 900px) {
+        dl {
+            display: none;
+        }
+    }
 }
