--- a/public/styles/player.less
+++ b/public/styles/player.less
@@ -18,9 +18,13 @@
 
 #player-progress {
     .progress {
-        width: 170px;
+        width: 250px;
         float: left;
         margin: 5px 0 0 10px;
+
+        @media only screen and (min-width : 900px) {
+            width: 180px;
+        }
 
         @media only screen and (min-width : 1280px) {
             width: 310px;
@@ -31,7 +35,7 @@
         }
 
         @media only screen and (min-width : 1920px) {
-            width: 630px;
+            width: 590px;
         }
     }
 }
